[gd_scene load_steps=5 format=3 uid="uid://b6av1hu6mdqwc"]

[ext_resource type="Script" path="res://scenes/components/columns/ColumnsBrick.gd" id="1_f54m6"]
[ext_resource type="PackedScene" uid="uid://d2173so402ot" path="res://scenes/components/columns/column-brick/ColumnBrick.tscn" id="2_hes6y"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i818p"]
size = Vector3(48, 0.237899, 48)

[sub_resource type="BoxShape3D" id="BoxShape3D_w5t68"]
size = Vector3(1, 0.343642, 1)

[node name="ColumnsBrick" type="Area3D"]
collision_layer = 0
script = ExtResource("1_f54m6")
metadata/_edit_group_ = true

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_i818p")
metadata/_edit_lock_ = true

[node name="ColumnBrick" parent="." instance=ExtResource("2_hes6y")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, -3.1, 0)
collision_layer = 0

[node name="Columns" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -17.95, 0)
collision_layer = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Collision" type="CollisionShape3D" parent="Columns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.2, 0)
shape = SubResource("BoxShape3D_w5t68")
metadata/_edit_lock_ = true

[node name="ColumnBrick_0" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, -1.97346, 0.00243449)

[node name="ColumnBrick_1" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 0.0265388, 0.00243449)

[node name="ColumnBrick_2" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 2.02654, 0.00243449)

[node name="ColumnBrick_3" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 4.02654, 0.00243449)

[node name="ColumnBrick_4" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 6.02654, 0.00243449)

[node name="ColumnBrick_5" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 8.02654, 0.00243449)

[node name="ColumnBrick_6" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 10.0265, 0.00243449)

[node name="ColumnBrick_7" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 12.0265, 0.00243449)

[node name="ColumnBrick_8" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 14.0265, 0.00243449)

[node name="ColumnBrick_9" parent="Columns" instance=ExtResource("2_hes6y")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0145813, 16.0265, 0.00243449)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Columns" to="." method="_on_columns_body_entered"]
[connection signal="body_exited" from="Columns" to="." method="_on_columns_body_exited"]
